--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,38 @@ h2 {
   border-radius: 4px;
 }
 
+#battlefield,
+#preview-slot {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-content: center;
+}
+
+#queue {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 120px;
+  max-width: 360px;
+  overflow-x: auto; /* 允許橫向捲動 */
+}
+
+.slot {
+  width: 120px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.slot > div,
+h3 {
+  padding: 10px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
 input:focus {
   outline: none;
   border-color: #fce514;
