--- a/src/hook/GameStateSender.css
+++ b/src/hook/GameStateSender.css
@@ -1,3 +1,9 @@
+.status-indicator {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
 .status-indicator p {
   display: inline-flex;
   align-items: center;
