--- a/src/hook/NgrokStatus.css
+++ b/src/hook/NgrokStatus.css
@@ -1,3 +1,10 @@
+.ngrok-status-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
+}
+
 .copy-link {
   position: relative;
   display: inline-block;
